--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node dist/server.js",
     "type-check": "tsc --noEmit"
   },
@@ -27,7 +27,8 @@
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -37,7 +38,6 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/pdf-parse": "^1.1.5",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "ts-node-dev": "^2.0.0"
   }
 }
